8""""8                  
8    8 e   e eeeee eeeee
8eeee8 8   8   8   8  88
88   8 8e  8   8e  8   8
88   8 88  8   88  8   8
88   8 88ee8   88  8eee8

          3.0


The future of IRC bots is here! Xelhua gives to you, Auto 3.0, a new version of
the popular Auto IRC bot.

In this alpha6 release, we have added:

* Added an UNO module for playing the classic game of UNO.
* Added an Eval module for evaluating Perl code.
* Added a BotStats module for returning statistics about the bot.

Bug fixes:

* Fixed a bug that occurs when our configured nickname is in use.

Incompatibilities:

None

We thank you for choosing Auto. Please remember that he is still in mid-
development stages. But we hope we've piqued your interest, as Auto's upcoming
module repository will allow modules to be created by anyone and uploaded
there for everyone to use.

Auto's goal is to create an efficient, stable and highly customizable IRC bot
in Perl. To offer an alternative to other platforms.

Enjoy Auto 3.0.0 Alpha 6!