@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ===============================================================================
+    * Fixed a bug with multi-prefix support.
     * Added fpfmt() to API::Std.
     * Auto::GR renamed to $Auto::VERGITREV.
     * Bumped minimum version for API to 3.0.0a6.
